Aula03 - Objetos em JS e JQuery

--- a/Aula03/index.html
+++ b/Aula03/index.html
@@ -10,6 +10,18 @@
 
     <button onclick="lerObjeto()">Ler Objeto</button>
     <p id="pObjeto"></p>
+
+
+    <hr> 
+    Largura: <input type="text" id="txtLargura" /> <br>
+    altura <input type="text" id="txtAltura" /> <br>
+    <button onclick="calcularArea()">Calcular</button>
+    <div id="result" ></div>
+
+    <hr>
+    <div id="minhaDiv"></div>
+    <button id="btnAlterar" >Alterar Div</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js" type="application/javascript" ></script>
 </body>
 </html>
